samples/_failures_safe/1761344688_9377c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f4f4cf7.c: In function ‘main’:
./samples/SAFE/__tmp_1f4f4cf7.c:161:17: error: expected expression at end of input
  161 |                 if (status == 1)
      |                 ^~
./samples/SAFE/__tmp_1f4f4cf7.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f4f4cf7.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f4f4cf7.c:161:17: error: expected declaration or statement at end of input
